更新网站内容和样式

--- a/index.html
+++ b/index.html
@@ -168,21 +168,23 @@
                             <button class="next-btn">&gt;</button>
                         </div>
                     </div>
-                    <div class="project-header">
-                        <h3>基于springboot的B2C电商平台</h3>
-                        <div class="project-tags">
-                            <span class="tag">Java</span>
-                            <span class="tag">SpringBoot</span>
-                            <span class="tag">MySQL</span>
-                            <span class="tag">Vue.js</span>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>基于springboot的B2C电商平台</h3>
+                            <div class="project-tags">
+                                <span class="tag">Java</span>
+                                <span class="tag">SpringBoot</span>
+                                <span class="tag">MySQL</span>
+                                <span class="tag">Vue.js</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-description">
-                        <p>开发了一个完整的电子商务平台，实现了用户管理、商品展示、购物车、订单处理等功能。项目采用前后端分离架构，后端使用SpringBoot实现RESTful API，前端基于Vue.js构建响应式界面。</p>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://github.com/yourusername/ecommerce-platform" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
-                        <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
+                        <div class="project-description">
+                            <p>开发了一个完整的电子商务平台，实现了用户管理、商品展示、购物车、订单处理等功能。项目采用前后端分离架构，后端使用SpringBoot实现RESTful API，前端基于Vue.js构建响应式界面。</p>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/yourusername/ecommerce-platform" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
+                            <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card">
@@ -193,21 +195,23 @@
                             <button class="next-btn">&gt;</button>
                         </div>
                     </div>
-                    <div class="project-header">
-                        <h3>基于javaee的图书管理系统</h3>
-                        <div class="project-tags">
-                            <span class="tag">JavaEE</span>
-                            <span class="tag">Servlet</span>
-                            <span class="tag">JSP</span>
-                            <span class="tag">MySQL</span>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>基于javaee的图书管理系统</h3>
+                            <div class="project-tags">
+                                <span class="tag">JavaEE</span>
+                                <span class="tag">Servlet</span>
+                                <span class="tag">JSP</span>
+                                <span class="tag">MySQL</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-description">
-                        <p>设计并实现了一个功能完备的图书管理系统，包括图书入库、借阅、归还、库存管理等功能。使用JavaEE技术栈开发，结合MySQL数据库实现数据持久化，提供了直观的用户界面和完善的权限管理。</p>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://github.com/yourusername/library-management" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
-                        <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
+                        <div class="project-description">
+                            <p>设计并实现了一个功能完备的图书管理系统，包括图书入库、借阅、归还、库存管理等功能。使用JavaEE技术栈开发，结合MySQL数据库实现数据持久化，提供了直观的用户界面和完善的权限管理。</p>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/yourusername/library-management" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
+                            <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card">
@@ -218,22 +222,24 @@
                             <button class="next-btn">&gt;</button>
                         </div>
                     </div>
-                    <div class="project-header">
-                        <h3>基于python langchain的简易agent问答平台</h3>
-                        <div class="project-tags">
-                            <span class="tag">Python</span>
-                            <span class="tag">LangChain</span>
-                            <span class="tag">OpenAI API</span>
-                            <span class="tag">VectorDB</span>
-                            <span class="tag">HTML/CSS/JS</span>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>基于python langchain的简易agent问答平台</h3>
+                            <div class="project-tags">
+                                <span class="tag">Python</span>
+                                <span class="tag">LangChain</span>
+                                <span class="tag">OpenAI API</span>
+                                <span class="tag">VectorDB</span>
+                                <span class="tag">HTML/CSS/JS</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-description">
-                        <p>开发了一个基于LangChain框架的智能问答平台，通过向量数据库存储和检索文档内容，结合OpenAI API实现智能问答和知识检索。系统能够理解用户提问，并从预先导入的知识库中检索相关信息提供准确回答。</p>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://github.com/yourusername/langchain-qa-platform" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
-                        <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
+                        <div class="project-description">
+                            <p>开发了一个基于LangChain框架的智能问答平台，通过向量数据库存储和检索文档内容，结合OpenAI API实现网页搜索（本地MCP工具）和知识检索。系统能够理解用户提问，并优先从互联网搜索，并从预先导入的知识库中检索相关信息提供准确回答。</p>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/yourusername/langchain-qa-platform" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
+                            <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
+                        </div>
                     </div>
                 </div>
             </div>
