--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <p>开发了一个完整的电子商务平台，实现了用户管理、商品展示、购物车、订单处理等功能。项目采用前后端分离架构，后端使用SpringBoot实现RESTful API，前端基于Vue.js构建响应式界面。</p>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/yourusername/ecommerce-platform" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
+                            <a href="https://github.com/RioArisk/B2C" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
                             <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                             <p>设计并实现了一个功能完备的图书管理系统，包括图书入库、借阅、归还、库存管理等功能。使用JavaEE技术栈开发，结合MySQL数据库实现数据持久化，提供了直观的用户界面和完善的权限管理。</p>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/yourusername/library-management" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
+                            <a href="https://github.com/RioArisk/library-management" target="_blank"><i class="fas fa-code"></i> 查看源码</a>
                             <a href="#" class="demo-link"><i class="fas fa-external-link-alt"></i> 查看演示</a>
                         </div>
                     </div>
